# SharpOctagon

./: .gitattributes  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  ufc_prediction_system_research.md
.claude/: settings.local.json
.github/workflows/: daily_refresh.yml  live_refresh.yml  weekly_retrain.yml
claude-design-handoff/: README.md  data-shapes.md  design-brief.md  repo-context.md  sample-data.json  screens-inventory.md
claude-design-handoff/screenshots/: INSTRUCTIONS.md
data/: age_curve_empirical.csv  fighter_images.json  fighter_metadata.json  fighter_overrides.json  model_performance.json  past_events.json  predictions.json  sportsbet_odds.json  upcoming_schedule.json
docs/: index.html
migrations/: env.py
models/: best_lgbm_params.json  calibration_comparison.csv  conformal_quantiles.json  conformal_quantiles_locally_weighted.json  conformal_quantiles_mondrian.json  cv_metrics.csv  cv_metrics_baseline.csv  data_audit_report.json  edge_backtest.json  edge_backtest_bets.csv  evaluation_report.json  feature_cols.json  feature_importances.json  fighter_ratings.json  fighter_sos.json  kelly_simulation.csv  prop_edge_backtest.json  prop_edge_backtest_bets.csv  prop_evaluation.json  prop_oof.parquet  reliability.csv  totals_edge_backtest.json  totals_models_summary.json  totals_oof.parquet  yearly_metrics.csv
scripts/: bootstrap.sh
site/: index.html
tests/: test_db_schema.py  test_evaluate.py  test_portfolio.py  test_ratings.py  test_round_totals_insights.py
tests/fixtures/: sample_prediction.json
ufc_predict/: cli.py
(+34 files in other folders)
