[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ufc-predict"
version = "0.1.0"
description = "Calibrated UFC fight win-probability predictions"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "rapidfuzz>=3.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "SPARQLWrapper>=2.0",
    "tqdm>=4.66",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "ipykernel>=6",
]

[project.scripts]
ufc-ingest = "ufc_predict.cli:ingest"
ufc-train  = "ufc_predict.cli:train"
ufc-predict = "ufc_predict.cli:predict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
